<?xml version="1.0"?>
<package>
  <name>multi_sensor_fusion</name>
  <version>0.1.0</version>
  <description>Multi sensor fusion behaviors</description>

  <maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>behavior_execution_controller</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aerostack_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>behavior_execution_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>aerostack_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/multi_sensor_fusion.xml" />
  </export>
</package>
